[package]
name = "god_sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- CORE SOLANA (Versione stabile) ---
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
# Aggiungi queste dipendenze specifiche per il TPU/QUIC
solana-quic-client = "1.18"
solana-streamer = "1.18"
# --- TOKEN STANDARD ---
spl-token = "4.0"
spl-associated-token-account = "2.3"
spl-token-2022 = "3.0.4"
chrono = { version = "0.4", features = ["serde"] }
# --- NETWORK & ASYNC ---
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking", "trust-dns"] }
# DNS resolver personalizzato (Cloudflare 1.1.1.1 + Google 8.8.8.8)
hickory-resolver = "0.24"
# --- SERIALIZZAZIONE & DATI ---
# FORZIAMO SERDE ALL'ULTIMA VERSIONE PER RISOLVERE IL CONFLITTO
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
borsh = "0.10"
bincode = "1.3"
hex = "0.4"
warp = "0.3"
# --- DATABASE & SICUREZZA ---
# QUI LA FIX IMPORTANTE: default-features = false
# Rimuove driver inutili (MySQL/Postgres) che causano l'errore
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
aes-gcm = "0.10"
rand = "0.8"
dotenv = "0.15"

# --- UTILITÀ ---
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
sha2 = "0.10"
urlencoding = "2.1"
# Pin base64ct to avoid edition2024 requirement
base64ct = "=1.7.3"
# --- TELEGRAM BOT ---
teloxide = { version = "0.12", features = ["macros"] }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
